fix: clear dark mode style

--- a/src/style.css
+++ b/src/style.css
@@ -39,16 +39,3 @@ h1 {
   margin: 0;
   padding: 0;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #1a1a1a;
-  }
-}
